fix content and data

--- a/data/cities/waterloo-village/village-market.yml
+++ b/data/cities/waterloo-village/village-market.yml
@@ -4,7 +4,7 @@ shop: convenience
 latitude: 42.352809300000004
 longitude: -84.1397007
 postcode: "49240-9244"
-city: *
+city: Waterloo Village
 street: "Clear Lake Road"
 housenumber: 8345
 phone: ""
