--- a/data/cities/pulaski/pulaski-mall.yml
+++ b/data/cities/pulaski/pulaski-mall.yml
@@ -4,7 +4,7 @@ shop: convenience
 latitude: 42.1154056
 longitude: -84.642155
 postcode: "49241-9752"
-city: *
+city: Pulaski
 street: "Pulaski Road"
 housenumber: 9965
 phone: ""
