update content and data

--- a/data/cities/ann-arbor/jars-cannabis.yml
+++ b/data/cities/ann-arbor/jars-cannabis.yml
@@ -1,11 +1,11 @@
-id: 463273119
+id: 381532667
 type: way
-latitude: 42.2453614
-longitude: -83.7005264
+latitude: 42.2455542
+longitude: -83.699764
 postcode: "48108"
 city: Ann Arbor
 street: "Packard Road"
-housenumber: 2995
+housenumber: 3005
 phone: ""
 opening_hours: ""
 website: ""
