--- a/data/cities/caledonia/target.yml
+++ b/data/cities/caledonia/target.yml
@@ -1,7 +1,7 @@
 id: 354844633
 type: way
-latitude: 42.846865
-longitude: -85.6152345
+latitude: 42.846856900000006
+longitude: -85.6152454
 postcode: "49316"
 city: Caledonia
 street: "Marketplace Drive Southeast"
