--- a/data/cities/detroit/family-dollar-29.yml
+++ b/data/cities/detroit/family-dollar-29.yml
@@ -1,11 +1,11 @@
-id: 325344220
+id: 325120148
 type: way
-latitude: 42.4180743
-longitude: -83.2597234
-postcode: "48219"
+latitude: 42.357952100000006
+longitude: -83.2353181
+postcode: "48228"
 city: Detroit
-street: "West Grand River Avenue"
-housenumber: 22200
+street: "Joy Road"
+housenumber: 19848
 phone: ""
 opening_hours: ""
 website: ""
