--- a/data/cities/detroit/family-dollar-30.yml
+++ b/data/cities/detroit/family-dollar-30.yml
@@ -1,11 +1,11 @@
-id: 397513419
+id: 325344220
 type: way
-latitude: 42.361223100000004
-longitude: -82.98303170000001
-postcode: "48214"
+latitude: 42.4180743
+longitude: -83.2597234
+postcode: "48219"
 city: Detroit
-street: "East Jefferson Avenue"
-housenumber: 9911
+street: "West Grand River Avenue"
+housenumber: 22200
 phone: ""
 opening_hours: ""
 website: ""
