--- a/data/cities/detroit/family-dollar-32.yml
+++ b/data/cities/detroit/family-dollar-32.yml
@@ -1,11 +1,11 @@
-id: 626775065
+id: 416897641
 type: way
-latitude: 42.3604654
-longitude: -83.098923
-postcode: "48208"
+latitude: 42.3708977
+longitude: -82.9552874
+postcode: ""
 city: Detroit
-street: "West Grand Boulevard"
-housenumber: 2322
+street: "East Jefferson Avenue"
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
