--- a/data/cities/walker/meijer-2.yml
+++ b/data/cities/walker/meijer-2.yml
@@ -1,7 +1,7 @@
-id: 8196720547
-type: node
-latitude: 42.9688414
-longitude: -85.77717510000001
+id: 270511143
+type: way
+latitude: 42.9688905
+longitude: -85.77729310000001
 postcode: "49544"
 city: Walker
 street: "Wilson Avenue Northwest"
