--- a/data/cities/ypsilanti/dairy-mart-2.yml
+++ b/data/cities/ypsilanti/dairy-mart-2.yml
@@ -1,7 +1,7 @@
-id: 8439703812
+id: 9333243600
 type: node
-latitude: 42.2153651
-longitude: -83.562925
+latitude: 42.2153757
+longitude: -83.5629114
 postcode: "48198"
 city: Ypsilanti
 street: "South Grove Street"
