--- a/data/cities/detroit/family-dollar-26.yml
+++ b/data/cities/detroit/family-dollar-26.yml
@@ -1,11 +1,11 @@
-id: 316618851
-type: way
-latitude: 42.424056500000006
-longitude: -83.27839440000001
-postcode: "48219"
+id: 9340899193
+type: node
+latitude: 42.3504085
+longitude: -83.2154276
+postcode: "48228"
 city: Detroit
-street: "Grand River Avenue"
-housenumber: 24133
+street: "Tireman Avenue"
+housenumber: 17729
 phone: ""
 opening_hours: ""
 website: ""
