--- a/data/cities/detroit/family-dollar-33.yml
+++ b/data/cities/detroit/family-dollar-33.yml
@@ -1,11 +1,11 @@
-id: 925276979
+id: 626775065
 type: way
-latitude: 42.395279300000006
-longitude: -83.1171815
-postcode: "48238"
+latitude: 42.3604654
+longitude: -83.098923
+postcode: "48208"
 city: Detroit
-street: "West Davison Street"
-housenumber: 2250
+street: "West Grand Boulevard"
+housenumber: 2322
 phone: ""
 opening_hours: ""
-website: "https://www.familydollar.com/locations/mi/detroit/32297/"
+website: ""
