--- a/data/cities/grand-rapids/family-fare-4.yml
+++ b/data/cities/grand-rapids/family-fare-4.yml
@@ -1,11 +1,11 @@
-id: 559325752
+id: 437107300
 type: way
-latitude: 42.972859500000006
-longitude: -85.73639580000001
-postcode: "49504"
+latitude: 42.852789200000004
+longitude: -85.6269051
+postcode: "49508"
 city: Grand Rapids
-street: "Lake Michigan Drive Northwest"
-housenumber: 2755
+street: "Kalamazoo Avenue Southeast"
+housenumber: 6127
 phone: ""
 opening_hours: ""
 website: ""
