--- a/data/cities/kalamazoo/ago-2.yml
+++ b/data/cities/kalamazoo/ago-2.yml
@@ -1,11 +1,11 @@
-id: 8365644173
+id: 8365850381
 type: node
-latitude: 42.3766112
-longitude: -85.6592578
+latitude: 42.2416305
+longitude: -85.6767433
 postcode: "49009"
 city: Kalamazoo
-street: "West D Avenue"
-housenumber: 5500
+street: "South 9th Street"
+housenumber: 5335
 phone: ""
 opening_hours: ""
 website: ""
