--- a/data/cities/kalamazoo/ago.yml
+++ b/data/cities/kalamazoo/ago.yml
@@ -1,11 +1,11 @@
-id: 8363129393
+id: 8365644173
 type: node
-latitude: 42.2702959
-longitude: -85.6477323
-postcode: "49008"
+latitude: 42.3766112
+longitude: -85.6592578
+postcode: "49009"
 city: Kalamazoo
-street: "Stadium Drive"
-housenumber: 4710
+street: "West D Avenue"
+housenumber: 5500
 phone: ""
 opening_hours: ""
 website: ""
