--- a/data/cities/walker/next-door-food-store.yml
+++ b/data/cities/walker/next-door-food-store.yml
@@ -1,7 +1,7 @@
-id: 8196717209
-type: node
-latitude: 42.972713500000005
-longitude: -85.7769397
+id: 881308316
+type: way
+latitude: 42.9726487
+longitude: -85.77709510000001
 postcode: "49534"
 city: Walker
 street: "Lake Michigan Drive Northwest"
