update content and data

--- a/data/cities/detroit/bluelight-market.yml
+++ b/data/cities/detroit/bluelight-market.yml
@@ -1,8 +1,8 @@
 id: 634991746
 type: way
-latitude: 42.3704546
-longitude: -82.99730000000001
-postcode: ""
+latitude: 42.3704399
+longitude: -82.99728800000001
+postcode: "48214"
 city: Detroit
 street: "Mack Avenue"
 housenumber: 8844
