--- a/data/cities/detroit/fands-tire-store.yml
+++ b/data/cities/detroit/fands-tire-store.yml
@@ -1,11 +1,11 @@
-id: 9362758429
+id: 9362758514
 type: node
-latitude: 42.377383800000004
-longitude: -82.9818966
+latitude: 42.369073400000005
+longitude: -83.001519
 postcode: "48214"
 city: Detroit
 street: "Mack Avenue"
-housenumber: 10960
+housenumber: 8437
 phone: ""
 opening_hours: ""
 website: ""
