--- a/data/cities/detroit/hibbard-liquor-and-bistro-2go.yml
+++ b/data/cities/detroit/hibbard-liquor-and-bistro-2go.yml
@@ -1,11 +1,11 @@
-id: 397513456
-type: way
-latitude: 42.3577628
-longitude: -82.9868816
+id: 9363805480
+type: node
+latitude: 42.3576648
+longitude: -82.98668070000001
 postcode: "48214"
 city: Detroit
 street: "East Jefferson Avenue"
-housenumber: 
+housenumber: 8933
 phone: ""
 opening_hours: ""
 website: ""
