--- a/data/cities/detroit/family-dollar-28.yml
+++ b/data/cities/detroit/family-dollar-28.yml
@@ -1,11 +1,11 @@
-id: 319198150
+id: 316618851
 type: way
-latitude: 42.372953900000006
-longitude: -83.19736230000001
-postcode: "48227"
+latitude: 42.424056500000006
+longitude: -83.27839440000001
+postcode: "48219"
 city: Detroit
-street: "Greenfield Road"
-housenumber: 11630
+street: "Grand River Avenue"
+housenumber: 24133
 phone: ""
 opening_hours: ""
 website: ""
