update content and data

--- a/data/cities/blissfield/it-takes-a-village.yml
+++ b/data/cities/blissfield/it-takes-a-village.yml
@@ -6,6 +6,6 @@ postcode: "49228"
 city: Blissfield
 street: "South Lane Street"
 housenumber: 202
-phone: "517-409-5100"
+phone: "+1-517-409-5100"
 opening_hours: "Tu 12:00-19:00; Th-Sa 12:00-19:00"
 website: "https://www.ittakesavillageconsignment.com/"
