--- a/data/cities/dearborn-heights/family-dollar-2.yml
+++ b/data/cities/dearborn-heights/family-dollar-2.yml
@@ -6,6 +6,6 @@ postcode: "48125"
 city: Dearborn Heights
 street: "Van Born Road"
 housenumber: 25190
-phone: "313-203-1257"
+phone: "+1-313-203-1257"
 opening_hours: ""
 website: "https://www.familydollar.com/locations/mi/dearborn-heights/28492/"
