--- a/data/cities/dearborn-heights/wholesale-heating-supply.yml
+++ b/data/cities/dearborn-heights/wholesale-heating-supply.yml
@@ -6,6 +6,6 @@ postcode: "48125"
 city: Dearborn Heights
 street: "Van Born Road"
 housenumber: 24712
-phone: "313-292-1400"
+phone: "+1-313-292-1400"
 opening_hours: ""
 website: "http://www.whsmi.com/"
