--- a/data/cities/detroit/alpha-k9.yml
+++ b/data/cities/detroit/alpha-k9.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Fenkell Street"
 housenumber: 18360
-phone: "(313) 653-4448"
+phone: "+1-313-653-4448"
 opening_hours: ""
 website: ""
