--- a/data/cities/detroit/chloe-starr-hair-closet.yml
+++ b/data/cities/detroit/chloe-starr-hair-closet.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Grand River Avenue"
 housenumber: 18916
-phone: "(313) 452-5228"
+phone: "+1-313-452-5228"
 opening_hours: ""
 website: "https://www.bestprosintown.com/mi/detroit/chloe-starr-hair-closet-/"
