--- a/data/cities/detroit/eden-esthetics.yml
+++ b/data/cities/detroit/eden-esthetics.yml
@@ -6,6 +6,6 @@ postcode: "48202"
 city: Detroit
 street: "Edsel Ford Freeway"
 housenumber: 89 E
-phone: "(313) 288-2597"
+phone: "+1-313-288-2597"
 opening_hours: "Tu-Su 10:00-19:00"
 website: "https://edendetroit.com/"
