--- a/data/cities/detroit/hollywood-hosiery.yml
+++ b/data/cities/detroit/hollywood-hosiery.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Grand River Avenue"
 housenumber: 16050
-phone: "(313) 270-3050"
+phone: "+1-313-270-3050"
 opening_hours: ""
 website: "http://www.hollywoodhosieryboutique.com/"
