--- a/data/cities/detroit/rosedale-complete-auto-repair.yml
+++ b/data/cities/detroit/rosedale-complete-auto-repair.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Grand River Avenue"
 housenumber: 18760
-phone: "(313) 272-0670"
+phone: "+1-313-272-0670"
 opening_hours: ""
 website: "https://rosedale-complete-auto-repair.business.site/"
