--- a/data/cities/detroit/the-w-beauty-und-barber-lounge.yml
+++ b/data/cities/detroit/the-w-beauty-und-barber-lounge.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Grand River Avenue"
 housenumber: 18718
-phone: "(313) 340-2834"
+phone: "+1-313-340-2834"
 opening_hours: ""
 website: ""
