--- a/data/cities/detroit/tonys-pharmacy.yml
+++ b/data/cities/detroit/tonys-pharmacy.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Fenkell Street"
 housenumber: 18360
-phone: "3132723744"
+phone: "+1-313-272-3744"
 opening_hours: ""
 website: ""
