--- a/data/cities/detroit/valvoline.yml
+++ b/data/cities/detroit/valvoline.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Grand River Avenue"
 housenumber: 18306
-phone: "313-646-6905"
+phone: "+1-313-646-6905"
 opening_hours: ""
 website: "https://www.detroitquicklube.com/"
