--- a/data/cities/ferndale/the-rust-belt-market.yml
+++ b/data/cities/ferndale/the-rust-belt-market.yml
@@ -6,6 +6,6 @@ postcode: "48220"
 city: Ferndale
 street: "South Woodward Avenue"
 housenumber: 22801
-phone: "(248) 238-8728"
+phone: "+1-248-238-8728"
 opening_hours: "Sa 11:00-19:00, Su 11:00-18:00"
 website: "rustbeltmarket.com"
