--- a/data/cities/flat-rock/verizon-wireless.yml
+++ b/data/cities/flat-rock/verizon-wireless.yml
@@ -6,6 +6,6 @@ postcode: "48134"
 city: Flat Rock
 street: "Telegraph Road"
 housenumber: 27014
-phone: "(734) 795-6699"
+phone: "+1-734-795-6699"
 opening_hours: ""
 website: "https://www.verizon.com/stores/details/michigan/flat-rock/tcc-flat-rock-a00000327827/"
