--- a/data/cities/luna-pier/luna-pure-nutrition.yml
+++ b/data/cities/luna-pier/luna-pure-nutrition.yml
@@ -6,6 +6,6 @@ postcode: "48157"
 city: Luna Pier
 street: "Evans Drive"
 housenumber: 10552
-phone: "734-770-8881"
+phone: "+1-734-770-8881"
 opening_hours: "05:30-15:00"
 website: ""
