--- a/data/cities/marquette/hotplate-pottery-und-art-studio.yml
+++ b/data/cities/marquette/hotplate-pottery-und-art-studio.yml
@@ -6,6 +6,6 @@ postcode: "49855"
 city: Marquette
 street: "West Washington Street"
 housenumber: 130
-phone: "19062289577"
+phone: "+1-906-228-9577"
 opening_hours: ""
 website: "http://www.hotplatepottery.com"
