--- a/data/cities/sterling-heights/carnova.yml
+++ b/data/cities/sterling-heights/carnova.yml
@@ -6,6 +6,6 @@ postcode: "48312"
 city: Sterling Heights
 street: "Metropolitan Parkway"
 housenumber: 7777
-phone: "5862291188"
+phone: "+1-586-229-1188"
 opening_hours: "Mo-Fr 09:00-18:00"
 website: "CarNovaMI.com"
