--- a/data/cities/sterling-heights/perfect-nails-llc.yml
+++ b/data/cities/sterling-heights/perfect-nails-llc.yml
@@ -6,6 +6,6 @@ postcode: "48310"
 city: Sterling Heights
 street: "Dequindre Road"
 housenumber: 33890
-phone: "586-983-3540"
+phone: "+1-586-983-3540"
 opening_hours: "Mo-Sa 10:00-20:00, Sun 12:00PM-5:00PM"
 website: "http://perfectnailsmi.com"
