--- a/data/cities/sterling-heights/suburban-ford-of-sterling-heights-used-car-super-center.yml
+++ b/data/cities/sterling-heights/suburban-ford-of-sterling-heights-used-car-super-center.yml
@@ -6,6 +6,6 @@ postcode: "48313"
 city: Sterling Heights
 street: "Van Dyke Avenue"
 housenumber: 40552
-phone: "877-831-9890"
+phone: "+1-877-831-9890"
 opening_hours: ""
 website: "https://www.suburbanfordofsterlingheights.com"
