--- a/data/cities/ann-arbor/chang-jung-mi-hair-collection.yml
+++ b/data/cities/ann-arbor/chang-jung-mi-hair-collection.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Ann Arbor
 street: "Thompson Street"
 housenumber: 312
-phone: "(734) 995-2194"
+phone: "+1-734-995-2194"
 opening_hours: "Mon-Sat 10:00-18:00; Sun  Closed"
 website: ""
