--- a/data/cities/ann-arbor/madison-electric.yml
+++ b/data/cities/ann-arbor/madison-electric.yml
@@ -6,6 +6,6 @@ postcode: "48108"
 city: Ann Arbor
 street: "Runway Boulevard"
 housenumber: 4649
-phone: "(734) 665-6131"
+phone: "+1-734-665-6131"
 opening_hours: "Mon-Fri 7:30 – 16:30"
 website: "https://madisonelectric.com/locations/madison-electric-ann-arbor/"
