--- a/data/cities/canton/crown-liquor.yml
+++ b/data/cities/canton/crown-liquor.yml
@@ -6,6 +6,6 @@ postcode: "48187"
 city: Canton
 street: "Ford Road"
 housenumber: 42432
-phone: "(734) 677-2722"
+phone: "+1-734-677-2722"
 opening_hours: ""
 website: ""
