--- a/data/cities/canton/five-below.yml
+++ b/data/cities/canton/five-below.yml
@@ -6,6 +6,6 @@ postcode: "48187"
 city: Canton
 street: "Ford Road"
 housenumber: 41864
-phone: "(734) 844-0583"
+phone: "+1-734-844-0583"
 opening_hours: ""
 website: "https://locations.fivebelow.com/mi/canton/41864-ford-rd"
