--- a/data/cities/canton/marshalls.yml
+++ b/data/cities/canton/marshalls.yml
@@ -6,6 +6,6 @@ postcode: "48187"
 city: Canton
 street: "Ford Road"
 housenumber: 41920
-phone: "734-981-1436"
+phone: "+1-734-981-1436"
 opening_hours: "Mo-Sa 09:30-21:30; Su 10:00-20:00"
 website: "https://www.marshalls.com/us/store/stores/Canton-MI-48187/116/aboutstore"
