--- a/data/cities/dearborn-heights/a-to-z-heating.yml
+++ b/data/cities/dearborn-heights/a-to-z-heating.yml
@@ -6,6 +6,6 @@ postcode: "48125"
 city: Dearborn Heights
 street: "Van Born Road"
 housenumber: 24614
-phone: "313-291-8200"
+phone: "+1-313-291-8200"
 opening_hours: ""
 website: "https://www.atozheating.com/"
