--- a/data/cities/detroit/boost-mobile-2.yml
+++ b/data/cities/detroit/boost-mobile-2.yml
@@ -6,6 +6,6 @@ postcode: "48223"
 city: Detroit
 street: "Grand River Avenue"
 housenumber: 18551
-phone: "(313) 450-3301"
+phone: "+1-313-450-3301"
 opening_hours: ""
 website: "https://www.boostmobile.com/locations/bd/boost-mobile-mi-detroit-18551-grandriver-ave-48223/"
