--- a/data/cities/ferndale/the-plant-house.yml
+++ b/data/cities/ferndale/the-plant-house.yml
@@ -6,6 +6,6 @@ postcode: "48220"
 city: Ferndale
 street: "Woodward Avenue"
 housenumber: 22801
-phone: "248-270-8404"
+phone: "+1-248-270-8404"
 opening_hours: "Sa 11:00-19:00, Su 11:00-18:00"
 website: "planthouseferndale.com"
