--- a/data/cities/flat-rock/the-mane-salon.yml
+++ b/data/cities/flat-rock/the-mane-salon.yml
@@ -6,6 +6,6 @@ postcode: "48134"
 city: Flat Rock
 street: "Gibraltar Road"
 housenumber: 26154
-phone: "7347956019"
+phone: "+1-734-795-6019"
 opening_hours: "Tu,Th 10:00-20:00; We 12:00-05:00; Fr 10:00-18:00; Sa 09:00-16:00"
 website: "https://themanesalonfr.com/"
