--- a/data/cities/grand-rapids/chow-hound-pet-supplies.yml
+++ b/data/cities/grand-rapids/chow-hound-pet-supplies.yml
@@ -6,6 +6,6 @@ postcode: "49546"
 city: Grand Rapids
 street: "Burton Street Southeast"
 housenumber: 2490
-phone: "(616) 808-3146"
+phone: "+1-616-808-3146"
 opening_hours: "Mo-Su 09:00-21:00"
 website: "https://shop.chowhoundpet.com/products/shop/"
