--- a/data/cities/grand-rapids/fresh-thyme.yml
+++ b/data/cities/grand-rapids/fresh-thyme.yml
@@ -6,6 +6,6 @@ postcode: "49546"
 city: Grand Rapids
 street: "Burton Street Southeast"
 housenumber: 2470
-phone: "(616) 228-6530"
+phone: "+1-616-228-6530"
 opening_hours: "Mo-Su 07:00-22:00"
 website: "https://www.freshthyme.com/"
