--- a/data/cities/grand-rapids/rise-smoke-vape-shop-28th-st.yml
+++ b/data/cities/grand-rapids/rise-smoke-vape-shop-28th-st.yml
@@ -6,6 +6,6 @@ postcode: "49512"
 city: Grand Rapids
 street: "28th Street Southeast"
 housenumber: 3839
-phone: "6164193979"
+phone: "+1-616-419-3979"
 opening_hours: ""
 website: "rise-smokevape-shop-28th-st.business.site"
