--- a/data/cities/jackson/karamaknife-tattoo-und-art-collective.yml
+++ b/data/cities/jackson/karamaknife-tattoo-und-art-collective.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Jackson
 street: "West Pearl Street"
 housenumber: 131
-phone: "(517) 795-2336"
+phone: "+1-517-795-2336"
 opening_hours: ""
 website: "https://www.karmaknife.art/"
