--- a/data/cities/jackson/schupbachs-sporting-goods.yml
+++ b/data/cities/jackson/schupbachs-sporting-goods.yml
@@ -6,6 +6,6 @@ postcode: "49201"
 city: Jackson
 street: "West Pearl Street"
 housenumber: 141
-phone: "(517) 782-8418"
+phone: "+1-517-782-8418"
 opening_hours: "Mo-Fr 9:00-17:00; Sa 9:00-14:00"
 website: "https://schupbachssportinggoods.com/"
