--- a/data/cities/lanse/dollar-general.yml
+++ b/data/cities/lanse/dollar-general.yml
@@ -6,6 +6,6 @@ postcode: "49946"
 city: L'Anse
 street: "US HIGHWAY 41"
 housenumber: 111
-phone: "(906) 524-7799"
+phone: "+1-906-524-7799"
 opening_hours: "Mo-Su 08:00-21:00"
 website: ""
