--- a/data/cities/lanse/ericksons-true-value.yml
+++ b/data/cities/lanse/ericksons-true-value.yml
@@ -6,6 +6,6 @@ postcode: "49946"
 city: L'Anse
 street: "US HIGHWAY 41"
 housenumber: 17752
-phone: "(906) 524-6295"
+phone: "+1-906-524-6295"
 opening_hours: "Mo-Sa 07:00-17:30"
 website: "https://stores.truevalue.com/mi/lanse/19922/"
