--- a/data/cities/lanse/family-dollar.yml
+++ b/data/cities/lanse/family-dollar.yml
@@ -6,6 +6,6 @@ postcode: "49946"
 city: L'Anse
 street: "US HIGHWAY 41"
 housenumber: 101
-phone: "(906) 662-6222"
+phone: "+1-906-662-6222"
 opening_hours: "Mo-Su 08:00-21:00"
 website: "https://www.familydollar.com/locations/mi/l-anse/25769/"
