--- a/data/cities/lanse/kissel.yml
+++ b/data/cities/lanse/kissel.yml
@@ -6,6 +6,6 @@ postcode: "49946"
 city: L'Anse
 street: "US Highway 41"
 housenumber: 920
-phone: "906-524-7870"
+phone: "+1-906-524-7870"
 opening_hours: ""
 website: "https://kisselauto.wixsite.com/kissel/inventory"
