--- a/data/cities/lanse/pats-foods.yml
+++ b/data/cities/lanse/pats-foods.yml
@@ -6,6 +6,6 @@ postcode: "49946"
 city: L'Anse
 street: "North Main Street"
 housenumber: 139
-phone: "(906) 524-6463"
+phone: "+1-906-524-6463"
 opening_hours: "Mo-Su 07:00-22:00"
 website: "http://patsfoodsiga.com"
