--- a/data/cities/marquette/hotplate-clayworks.yml
+++ b/data/cities/marquette/hotplate-clayworks.yml
@@ -6,6 +6,6 @@ postcode: "49855"
 city: Marquette
 street: "North 3rd Street"
 housenumber: 110
-phone: "19063615939"
+phone: "+1-906-361-5939"
 opening_hours: ""
 website: "https://www.hotplateclayworks.com/"
