--- a/data/cities/redford/sun-valley-supermarket.yml
+++ b/data/cities/redford/sun-valley-supermarket.yml
@@ -6,6 +6,6 @@ postcode: "48239"
 city: Redford
 street: "Telegraph Road"
 housenumber: 9291
-phone: "313-543-3331"
+phone: "+1-313-543-3331"
 opening_hours: "Mo-Su 08:00-20:00"
 website: "sunvalleysm.com"
