--- a/data/cities/roseville/demasters-motorcycle.yml
+++ b/data/cities/roseville/demasters-motorcycle.yml
@@ -6,6 +6,6 @@ postcode: "48066"
 city: Roseville
 street: "South Gratiot Avenue"
 housenumber: 30345
-phone: "(586) 415-8089"
+phone: "+1-586-415-8089"
 opening_hours: ""
 website: ""
