--- a/data/cities/sterling-heights/birmingham-jewelry.yml
+++ b/data/cities/sterling-heights/birmingham-jewelry.yml
@@ -6,6 +6,6 @@ postcode: "48310"
 city: Sterling Heights
 street: "Dequindre Road"
 housenumber: 34756
-phone: "1(586) 939-5100"
+phone: "+1-586-939-5100"
 opening_hours: ""
 website: "https://birminghamjewelry.com/"
