--- a/data/cities/sterling-heights/josephs-fashion.yml
+++ b/data/cities/sterling-heights/josephs-fashion.yml
@@ -6,6 +6,6 @@ postcode: "48310"
 city: Sterling Heights
 street: "Dequindre Road"
 housenumber: 37144
-phone: "(586) 983-8111"
+phone: "+1-586-983-8111"
 opening_hours: ""
 website: "https://www.josephsfashion.net/"
