--- a/data/cities/warren/prestige-cadillac.yml
+++ b/data/cities/warren/prestige-cadillac.yml
@@ -6,6 +6,6 @@ postcode: "48093-2365"
 city: Warren
 street: "Van Dyke Avenue"
 housenumber: 29900
-phone: "586-782-4142"
+phone: "+1-586-782-4142"
 opening_hours: ""
 website: "https://www.prestigecadillac.com/"
