--- a/data/cities/ypsilanti/u-haul.yml
+++ b/data/cities/ypsilanti/u-haul.yml
@@ -6,6 +6,6 @@ postcode: "48197"
 city: Ypsilanti
 street: "Washtenaw Road"
 housenumber: 2714
-phone: "(734) 434-9100"
+phone: "+1-734-434-9100"
 opening_hours: ""
 website: "https://www.uhaul.com/Locations/Self-Storage-near-Ypsilanti-MI-48197/752083/"
