update content and data

--- a/data/cities/detroit/park-medical-center-detroit-east-jefferson-avenue.yml
+++ b/data/cities/detroit/park-medical-center-detroit-east-jefferson-avenue.yml
@@ -6,6 +6,6 @@ postcode: "48215"
 city: Detroit
 street: "East Jefferson Avenue"
 housenumber: 12871
-phone: ""
+phone: "(313) 821-3900"
 opening_hours: ""
-website: ""
+website: "https://parkmedicalcenters.com/locations/east-jefferson/"
