--- a/data/cities/westland/tiger-mart.yml
+++ b/data/cities/westland/tiger-mart.yml
@@ -1,11 +1,11 @@
-id: 317186843
-type: way
-latitude: 42.35435
-longitude: -83.33286
+id: 8618146509
+type: node
+latitude: 42.32435
+longitude: -83.4178
 postcode: "48185"
 city: Westland
-street: "Middlebelt"
-housenumber: 8755
-phone: ""
-opening_hours: ""
+street: "Ford Road"
+housenumber: 38350
+phone: "+1 734 641 6666"
+opening_hours: "24/7"
 website: ""
