--- a/data/cities/detroit/tiger-mart-2.yml
+++ b/data/cities/detroit/tiger-mart-2.yml
@@ -1,11 +1,11 @@
-id: 876899656
+id: 586978753
 type: way
-latitude: 42.35197
-longitude: -83.04738
-postcode: "48207"
+latitude: 42.37028
+longitude: -82.95991
+postcode: "48215"
 city: Detroit
-street: "Mack Avenue"
-housenumber: 975
-phone: "+1 313 935 3078"
-opening_hours: "24/7"
+street: "East Jefferson Avenue"
+housenumber: 12441
+phone: ""
+opening_hours: ""
 website: ""
