--- a/data/cities/warren/i-smoke-und-vape.yml
+++ b/data/cities/warren/i-smoke-und-vape.yml
@@ -6,6 +6,6 @@ postcode: "48093"
 city: Warren
 street: "Van Dyke Avenue"
 housenumber: 32686
-phone: "+15862752380"
+phone: "+1-586-275-2380"
 opening_hours: ""
 website: "https://www.vapeshopwarren.com/"
