update content and data

--- a/data/cities/brownstown-township/cvs-pharmacy.yml
+++ b/data/cities/brownstown-township/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 687656481
-type: way
-latitude: 42.16793
-longitude: -83.26764
-postcode: "48174"
+id: 5459648989
+type: node
+latitude: 42.13894
+longitude: -83.26435
+postcode: "48183"
 city: Brownstown Township
-street: "Telegraph Road"
-housenumber: 18900
+street: "West Road"
+housenumber: 23800
 phone: ""
 opening_hours: ""
 website: ""
