--- a/data/cities/detroit/liquor-town.yml
+++ b/data/cities/detroit/liquor-town.yml
@@ -1,7 +1,7 @@
-id: 925276981
-type: way
-latitude: 42.39434
-longitude: -83.11899
+id: 9385053858
+type: node
+latitude: 42.39443
+longitude: -83.11889
 postcode: "48238"
 city: Detroit
 street: "West Davison Street"
