--- a/data/cities/flat-rock/76.yml
+++ b/data/cities/flat-rock/76.yml
@@ -1,7 +1,7 @@
-id: 8590447956
-type: node
-latitude: 42.11568
-longitude: -83.2817
+id: 925644775
+type: way
+latitude: 42.11571
+longitude: -83.28157
 postcode: "48134"
 city: Flat Rock
 street: "Telegraph Road"
