--- a/data/cities/flat-rock/cvs-pharmacy.yml
+++ b/data/cities/flat-rock/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 849368397
-type: way
-latitude: 42.11002
-longitude: -83.28415
+id: 9392998797
+type: node
+latitude: 42.10977
+longitude: -83.28588
 postcode: "48134"
 city: Flat Rock
 street: "Telegraph Road"
-housenumber: 26883
+housenumber: 27000
 phone: ""
 opening_hours: ""
 website: ""
