--- a/data/cities/flat-rock/meijer-2.yml
+++ b/data/cities/flat-rock/meijer-2.yml
@@ -1,11 +1,11 @@
-id: 630012190
+id: 905943894
 type: way
-latitude: 42.11127
-longitude: -83.2901
+latitude: 42.10964
+longitude: -83.28777
 postcode: "48134"
 city: Flat Rock
 street: "Vreeland Road"
-housenumber: 26100
-phone: "+1-734-984-1100"
+housenumber: 25950
+phone: ""
 opening_hours: ""
 website: ""
