--- a/data/cities/taylor/sunoco-3.yml
+++ b/data/cities/taylor/sunoco-3.yml
@@ -1,11 +1,11 @@
-id: 928730285
+id: 819616347
 type: way
-latitude: 42.26951
-longitude: -83.23226
+latitude: 42.20389
+longitude: -83.26756
 postcode: "48180"
 city: Taylor
-street: "Van Born Road"
-housenumber: 20009
+street: "Telegraph Road"
+housenumber: 14055
 phone: ""
 opening_hours: ""
 website: ""
