--- a/data/cities/caledonia/broadmoor-convenience-store.yml
+++ b/data/cities/caledonia/broadmoor-convenience-store.yml
@@ -7,5 +7,5 @@ city: Caledonia
 street: "Broadmoor Avenue Southeast"
 housenumber: 6773
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
