--- a/data/cities/flat-rock/meijer.yml
+++ b/data/cities/flat-rock/meijer.yml
@@ -1,11 +1,11 @@
-id: 8590447972
-type: node
-latitude: 42.10968
-longitude: -83.28781
+id: 630012190
+type: way
+latitude: 42.11127
+longitude: -83.2901
 postcode: "48134"
 city: Flat Rock
 street: "Vreeland Road"
-housenumber: 25950
-phone: ""
+housenumber: 26100
+phone: "+1-734-984-1100"
 opening_hours: ""
 website: ""
