update content and data

--- a/data/cities/clarkston/bp-shop.yml
+++ b/data/cities/clarkston/bp-shop.yml
@@ -1,7 +1,7 @@
-id: 8510804737
-type: node
-latitude: 42.74351
-longitude: -83.42019
+id: 916320671
+type: way
+latitude: 42.74362
+longitude: -83.42014
 postcode: "48346"
 city: Clarkston
 street: "North Main Street"
