--- a/data/cities/hillsdale/dollar-general.yml
+++ b/data/cities/hillsdale/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 8410250047
+id: 8410250087
 type: node
-latitude: 41.92271
-longitude: -84.62972
+latitude: 41.94115
+longitude: -84.65071
 postcode: "49242"
 city: Hillsdale
-street: "East Carleton Road"
-housenumber: 103
+street: "West Carleton Road"
+housenumber: 2990
 phone: ""
 opening_hours: ""
 website: ""
