--- a/data/cities/ludington/heggs-furniture.yml
+++ b/data/cities/ludington/heggs-furniture.yml
@@ -1,11 +1,11 @@
-id: 5473740074
-type: node
-latitude: 43.95588
-longitude: -86.44809
+id: 1020193867
+type: way
+latitude: 43.95568
+longitude: -86.4496
 postcode: "49431"
 city: Ludington
 street: "West Ludington Avenue"
-housenumber: 104
+housenumber: 200
 phone: ""
 opening_hours: ""
 website: ""
