--- a/data/cities/ortonville/citgo.yml
+++ b/data/cities/ortonville/citgo.yml
@@ -1,7 +1,7 @@
-id: 8542894508
-type: node
-latitude: 42.844
-longitude: -83.44745
+id: 556838160
+type: way
+latitude: 42.84406
+longitude: -83.44753
 postcode: "48462"
 city: Ortonville
 street: "South Ortonville Road"
