--- a/data/cities/saginaw/dollar-general.yml
+++ b/data/cities/saginaw/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 1018776121
+id: 1020354987
 type: way
-latitude: 43.48004
-longitude: -83.94442
+latitude: 43.48026
+longitude: -83.94281
 postcode: "48604"
 city: Saginaw
 street: "Tittabawassee Road"
 housenumber: 1330
-phone: "+19892729880"
+phone: "19892729880"
 opening_hours: "Mo-Su 08:00-22:00"
 website: "https://www.dollargeneral.com"
