--- a/data/cities/southfield/meijer.yml
+++ b/data/cities/southfield/meijer.yml
@@ -7,5 +7,5 @@ city: Southfield
 street: "Telegraph Road"
 housenumber: 28800
 phone: "+1-248-304-9500"
-opening_hours: ""
+opening_hours: "Mo-Su 06:00-00:00"
 website: ""
