update content and data

--- a/data/cities/detroit/mdahs-elijah-mccoy-drive.yml
+++ b/data/cities/detroit/mdahs-elijah-mccoy-drive.yml
@@ -1,7 +1,7 @@
-id: 58371564
-type: way
-latitude: 42.36051
-longitude: -83.08067
+id: 9431467615
+type: node
+latitude: 42.36133
+longitude: -83.08024
 postcode: "48202"
 city: Detroit
 street: "Elijah McCoy Drive"
