--- a/data/cities/ludington/wesco.yml
+++ b/data/cities/ludington/wesco.yml
@@ -1,11 +1,11 @@
-id: 7914889368
+id: 7914899818
 type: node
-latitude: 43.9551
-longitude: -86.45103
+latitude: 43.95591
+longitude: -86.42138
 postcode: "49431"
 city: Ludington
-street: "West Ludington Avenue"
-housenumber: 301
+street: "East Ludington Avenue"
+housenumber: 5685
 phone: ""
 opening_hours: ""
 website: ""
