update content and data

--- a/data/cities/holland/atandt.yml
+++ b/data/cities/holland/atandt.yml
@@ -1,11 +1,11 @@
-id: 499980756
-type: way
-latitude: 42.78887
-longitude: -86.10769
-postcode: "49423"
+id: 9451618683
+type: node
+latitude: 42.83092
+longitude: -86.09455
+postcode: "49424"
 city: Holland
-street: "West 10th Street"
-housenumber: 13
-phone: ""
-opening_hours: ""
-website: ""
+street: "West Shore Drive"
+housenumber: 3435
+phone: "+1-616-994-0459"
+opening_hours: "Mo-Sa 10:00-20:00; Su 11:00-18:00"
+website: "https://www.att.com/stores/michigan/holland/91949"
