--- a/data/cities/grand-ledge/american-cycle-and-fitness.yml
+++ b/data/cities/grand-ledge/american-cycle-and-fitness.yml
@@ -7,5 +7,5 @@ city: Grand Ledge
 street: "East Saginaw Highway"
 housenumber: 669
 phone: "+1 517 481 2226"
-opening_hours: ""
+opening_hours: "Mo-Sa 10:00-18:00"
 website: "https://www.americancycleandfitness.com/"
