--- a/data/cities/riverview/mobil-mart.yml
+++ b/data/cities/riverview/mobil-mart.yml
@@ -1,11 +1,11 @@
-id: 8618591473
-type: node
-latitude: 42.18461
-longitude: -83.18881
+id: 717913358
+type: way
+latitude: 42.17094
+longitude: -83.18983
 postcode: "48193"
 city: Riverview
 street: "Fort Street"
-housenumber: 17013
-phone: ""
-opening_hours: ""
+housenumber: 18982
+phone: "+1 734 284 8274"
+opening_hours: "Mo-Su 06:00-23:00"
 website: ""
