update content and data

--- a/data/cities/belleville/antiques-on-main.yml
+++ b/data/cities/belleville/antiques-on-main.yml
@@ -1,11 +1,11 @@
-id: 9464718421
+id: 9464714630
 type: node
-latitude: 42.20982
-longitude: -83.49324
-postcode: "48111"
+latitude: 42.20872
+longitude: -83.49093
+postcode: ""
 city: Belleville
 street: "Main Street"
-housenumber: 573
+housenumber: 430
 phone: ""
 opening_hours: ""
 website: ""
