--- a/data/cities/detroit/valero-16.yml
+++ b/data/cities/detroit/valero-16.yml
@@ -1,11 +1,11 @@
-id: 8788711485
+id: 8793160856
 type: node
-latitude: 42.37346
-longitude: -83.17845
-postcode: "48227"
+latitude: 42.35141
+longitude: -83.18739
+postcode: "48228"
 city: Detroit
-street: "Schaefer Highway"
-housenumber: 11611
-phone: "+1 313 397 9168"
+street: "Tireman Street"
+housenumber: 14620
+phone: "+1 313 757 7049"
 opening_hours: "24/7"
 website: ""
