--- a/data/cities/grand-rapids/meijer-5.yml
+++ b/data/cities/grand-rapids/meijer-5.yml
@@ -1,11 +1,11 @@
-id: 8221291459
-type: node
-latitude: 42.91374
-longitude: -85.53201
+id: 225054544
+type: way
+latitude: 42.91133
+longitude: -85.6299
 postcode: "49508"
 city: Grand Rapids
 street: "28th Street Southeast"
-housenumber: 5531
-phone: ""
-opening_hours: ""
+housenumber: 1540
+phone: "+1-616-452-9651"
+opening_hours: "24/7"
 website: ""
