--- a/data/cities/grand-rapids/meijer-6.yml
+++ b/data/cities/grand-rapids/meijer-6.yml
@@ -1,11 +1,11 @@
-id: 225054544
+id: 269620411
 type: way
-latitude: 42.91133
-longitude: -85.6299
-postcode: "49508"
+latitude: 42.91665
+longitude: -85.53318
+postcode: "49512"
 city: Grand Rapids
 street: "28th Street Southeast"
-housenumber: 1540
-phone: "+1-616-452-9651"
-opening_hours: "24/7"
-website: ""
+housenumber: 5531
+phone: "+1-616-949-7200"
+opening_hours: ""
+website: "https://www.meijer.com/"
