--- a/data/cities/grand-rapids/meijer-8.yml
+++ b/data/cities/grand-rapids/meijer-8.yml
@@ -1,11 +1,11 @@
-id: 348390284
+id: 550988967
 type: way
-latitude: 42.99742
-longitude: -85.59512
+latitude: 43.0335
+longitude: -85.6291
 postcode: "49525"
 city: Grand Rapids
-street: "East Beltline Avenue Northeast"
-housenumber: 1997
-phone: "+1-616-447-1500"
+street: "Plainfield Avenue Northeast"
+housenumber: 3757
+phone: "+1-616-365-1400"
 opening_hours: ""
 website: ""
