--- a/data/cities/livonia/mobil-mart-3.yml
+++ b/data/cities/livonia/mobil-mart-3.yml
@@ -1,11 +1,11 @@
-id: 8635715771
+id: 8635718519
 type: node
-latitude: 42.38365
-longitude: -83.3539
-postcode: "48154"
+latitude: 42.36866
+longitude: -83.37273
+postcode: "48150"
 city: Livonia
-street: "Schoolcraft Road"
-housenumber: 31420
-phone: ""
-opening_hours: ""
+street: "Plymouth Road"
+housenumber: 33400
+phone: "+1 734 522 2530"
+opening_hours: "06:00-23:00"
 website: ""
