--- a/data/cities/livonia/mobil-mart.yml
+++ b/data/cities/livonia/mobil-mart.yml
@@ -1,11 +1,11 @@
-id: 7265468454
+id: 8635715761
 type: node
-latitude: 42.37025
-longitude: -83.31393
+latitude: 42.38319
+longitude: -83.37362
 postcode: "48150"
 city: Livonia
-street: "Plymouth Road"
-housenumber: 27440
-phone: ""
-opening_hours: ""
+street: "Schoolcraft Road"
+housenumber: 33430
+phone: "+1 734 525 7244"
+opening_hours: "05:00-24:00"
 website: ""
