--- a/data/cities/auburn-hills/mobil-mart-2.yml
+++ b/data/cities/auburn-hills/mobil-mart-2.yml
@@ -1,11 +1,11 @@
-id: 553576632
-type: way
-latitude: 42.64965
-longitude: -83.24754
+id: 8501615138
+type: node
+latitude: 42.63448
+longitude: -83.21071
 postcode: "48326"
 city: Auburn Hills
-street: "North Opdyke Road"
-housenumber: 810
-phone: ""
-opening_hours: ""
+street: "West Auburn Road"
+housenumber: 3995
+phone: "+1 248 852 9011"
+opening_hours: "24/7"
 website: ""
