--- a/data/cities/detroit/valero-14.yml
+++ b/data/cities/detroit/valero-14.yml
@@ -1,11 +1,11 @@
-id: 8787182860
+id: 8787182930
 type: node
-latitude: 42.43363
-longitude: -83.05315
+latitude: 42.44691
+longitude: -83.06556
 postcode: "48234"
 city: Detroit
-street: "East 7 Mile Road"
-housenumber: 5041
-phone: "+1 313 485 1888"
-opening_hours: "24/7"
+street: "East 8 Mile Road"
+housenumber: 3910
+phone: ""
+opening_hours: ""
 website: ""
