--- a/data/cities/detroit/valero-15.yml
+++ b/data/cities/detroit/valero-15.yml
@@ -1,11 +1,11 @@
-id: 8787182930
+id: 8788711485
 type: node
-latitude: 42.44691
-longitude: -83.06556
-postcode: "48234"
+latitude: 42.37346
+longitude: -83.17845
+postcode: "48227"
 city: Detroit
-street: "East 8 Mile Road"
-housenumber: 3910
-phone: ""
-opening_hours: ""
+street: "Schaefer Highway"
+housenumber: 11611
+phone: "+1 313 397 9168"
+opening_hours: "24/7"
 website: ""
