--- a/data/cities/detroit/valero-17.yml
+++ b/data/cities/detroit/valero-17.yml
@@ -1,11 +1,11 @@
-id: 8793160856
+id: 8793316793
 type: node
-latitude: 42.35141
-longitude: -83.18739
-postcode: "48228"
+latitude: 42.38873
+longitude: -83.1196
+postcode: "48238"
 city: Detroit
-street: "Tireman Street"
-housenumber: 14620
-phone: "+1 313 757 7049"
+street: "Linwood Street"
+housenumber: 12619
+phone: "+1 313 868 7000"
 opening_hours: "24/7"
 website: ""
