--- a/data/cities/detroit/valero-18.yml
+++ b/data/cities/detroit/valero-18.yml
@@ -1,11 +1,11 @@
-id: 8793316793
+id: 9462034669
 type: node
-latitude: 42.38873
-longitude: -83.1196
-postcode: "48238"
+latitude: 42.43365
+longitude: -83.05315
+postcode: "48234"
 city: Detroit
-street: "Linwood Street"
-housenumber: 12619
-phone: "+1 313 868 7000"
+street: "East 7 Mile Road"
+housenumber: 5041
+phone: "+1 313 485 1888"
 opening_hours: "24/7"
 website: ""
