--- a/data/cities/grand-rapids/meijer-7.yml
+++ b/data/cities/grand-rapids/meijer-7.yml
@@ -1,11 +1,11 @@
-id: 269620411
+id: 348390284
 type: way
-latitude: 42.91665
-longitude: -85.53318
-postcode: "49512"
+latitude: 42.99742
+longitude: -85.59512
+postcode: "49525"
 city: Grand Rapids
-street: "28th Street Southeast"
-housenumber: 5531
-phone: "+1-616-949-7200"
+street: "East Beltline Avenue Northeast"
+housenumber: 1997
+phone: "+1-616-447-1500"
 opening_hours: ""
-website: "https://www.meijer.com/"
+website: ""
