--- a/data/cities/livonia/mobil-mart-2.yml
+++ b/data/cities/livonia/mobil-mart-2.yml
@@ -1,11 +1,11 @@
-id: 8635715761
+id: 8635715771
 type: node
-latitude: 42.38319
-longitude: -83.37362
-postcode: "48150"
+latitude: 42.38365
+longitude: -83.3539
+postcode: "48154"
 city: Livonia
 street: "Schoolcraft Road"
-housenumber: 33430
-phone: "+1 734 525 7244"
-opening_hours: "05:00-24:00"
+housenumber: 31420
+phone: ""
+opening_hours: ""
 website: ""
