--- a/data/cities/livonia/mobil-mart-5.yml
+++ b/data/cities/livonia/mobil-mart-5.yml
@@ -1,11 +1,11 @@
-id: 8635718574
+id: 8635718688
 type: node
-latitude: 42.41201
-longitude: -83.37478
-postcode: "48150"
+latitude: 42.39704
+longitude: -83.40246
+postcode: "48152"
 city: Livonia
-street: "Farmington Road"
-housenumber: 17111
-phone: "+1 734 522 4330"
-opening_hours: "24/7"
+street: "5 Mile Road"
+housenumber: 36300
+phone: ""
+opening_hours: ""
 website: ""
