--- a/data/cities/livonia/mobil-mart-6.yml
+++ b/data/cities/livonia/mobil-mart-6.yml
@@ -1,11 +1,11 @@
-id: 8635718688
+id: 9482247514
 type: node
-latitude: 42.39704
-longitude: -83.40246
-postcode: "48152"
+latitude: 42.37024
+longitude: -83.31393
+postcode: "48150"
 city: Livonia
-street: "5 Mile Road"
-housenumber: 36300
+street: "Plymouth Road"
+housenumber: 27440
 phone: ""
 opening_hours: ""
 website: ""
