--- a/data/cities/marquette/hotplate-clayworks.yml
+++ b/data/cities/marquette/hotplate-clayworks.yml
@@ -1,11 +1,11 @@
-id: 976061250
-type: way
-latitude: 46.54402
-longitude: -87.39508
+id: 9481512739
+type: node
+latitude: 46.54357
+longitude: -87.39411
 postcode: "49855"
 city: Marquette
-street: "North 3rd Street"
-housenumber: 110
-phone: "+1-906-361-5939"
+street: "West Washington Street"
+housenumber: 130
+phone: "1 906 361 5939"
 opening_hours: ""
-website: "https://www.hotplateclayworks.com/"
+website: "https://www.hotplateclayworks.com"
