--- a/data/cities/white-lake/bp-shop-2.yml
+++ b/data/cities/white-lake/bp-shop-2.yml
@@ -1,7 +1,7 @@
-id: 8584087653
-type: node
-latitude: 42.6548
-longitude: -83.55313
+id: 924931603
+type: way
+latitude: 42.65485
+longitude: -83.55307
 postcode: "48383"
 city: White Lake
 street: "Highland Road"
