--- a/data/cities/white-lake/meijer.yml
+++ b/data/cities/white-lake/meijer.yml
@@ -1,11 +1,11 @@
-id: 8584087679
-type: node
-latitude: 42.65003
-longitude: -83.53011
+id: 278842729
+type: way
+latitude: 42.65223
+longitude: -83.53287
 postcode: "48383"
 city: White Lake
 street: "Highland Road"
-housenumber: 6045
-phone: ""
+housenumber: 6001
+phone: "+1-248-889-6800"
 opening_hours: ""
-website: ""
+website: "https://www.meijer.com/"
