update content and data

--- a/data/cities/detroit/family-dollar-29.yml
+++ b/data/cities/detroit/family-dollar-29.yml
@@ -1,11 +1,11 @@
-id: 316618851
-type: way
-latitude: 42.42406
-longitude: -83.27839
-postcode: "48219"
+id: 9484584676
+type: node
+latitude: 42.38535
+longitude: -83.12832
+postcode: "48206"
 city: Detroit
-street: "Grand River Avenue"
-housenumber: 24133
+street: "Dexter Avenue"
+housenumber: 12603
 phone: ""
 opening_hours: ""
 website: ""
