--- a/data/cities/fenton/walmart-garden-center.yml
+++ b/data/cities/fenton/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 561350572
-type: way
-latitude: 42.79284
-longitude: -83.74541
+id: 9490267879
+type: node
+latitude: 42.79215
+longitude: -83.74338
 postcode: "48430"
 city: Fenton
 street: "Owen Road"
