--- a/data/cities/hazel-park/american-jewelry-and-loan.yml
+++ b/data/cities/hazel-park/american-jewelry-and-loan.yml
@@ -4,7 +4,7 @@ latitude: 42.44818
 longitude: -83.1025
 postcode: "48030"
 city: Hazel Park
-street: "John R. Road"
+street: "John R Road"
 housenumber: 20804
 phone: "+1-248-398-4653"
 opening_hours: ""
