--- a/data/cities/holly/alexs-market-and-grill.yml
+++ b/data/cities/holly/alexs-market-and-grill.yml
@@ -1,7 +1,7 @@
-id: 8522876138
-type: node
-latitude: 42.81456
-longitude: -83.57326
+id: 421378094
+type: way
+latitude: 42.81445
+longitude: -83.57345
 postcode: "48442"
 city: Holly
 street: "Grange Hall Road"
