--- a/data/cities/holly/beacon-and-bridge-market.yml
+++ b/data/cities/holly/beacon-and-bridge-market.yml
@@ -1,7 +1,7 @@
-id: 8522876237
-type: node
-latitude: 42.80066
-longitude: -83.62689
+id: 917648572
+type: way
+latitude: 42.80052
+longitude: -83.62697
 postcode: "48442"
 city: Holly
 street: "North Saginaw Street"
