--- a/data/cities/holly/holly-gas-company.yml
+++ b/data/cities/holly/holly-gas-company.yml
@@ -1,7 +1,7 @@
-id: 8522876172
-type: node
-latitude: 42.79261
-longitude: -83.62733
+id: 917648561
+type: way
+latitude: 42.79254
+longitude: -83.62739
 postcode: "48442"
 city: Holly
 street: "North Saginaw Street"
