--- a/data/cities/holly/holly-marathon.yml
+++ b/data/cities/holly/holly-marathon.yml
@@ -1,7 +1,7 @@
-id: 8522876181
-type: node
-latitude: 42.80611
-longitude: -83.6285
+id: 917648563
+type: way
+latitude: 42.80605
+longitude: -83.62842
 postcode: "48442"
 city: Holly
 street: "Grange Hall Road"
