--- a/data/cities/holly/mugg-and-bopps.yml
+++ b/data/cities/holly/mugg-and-bopps.yml
@@ -1,7 +1,7 @@
-id: 8522876226
-type: node
-latitude: 42.80682
-longitude: -83.6274
+id: 917648568
+type: way
+latitude: 42.80671
+longitude: -83.62746
 postcode: "48442"
 city: Holly
 street: "North Holly Road"
