--- a/data/cities/houghton/walmart-garden-center.yml
+++ b/data/cities/houghton/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 224163866
-type: way
-latitude: 47.10731
-longitude: -88.58845
+id: 9490313436
+type: node
+latitude: 47.10596
+longitude: -88.58921
 postcode: "49931"
 city: Houghton
 street: "Razorback Drive"
