--- a/data/cities/royal-oak/cvs-pharmacy-2.yml
+++ b/data/cities/royal-oak/cvs-pharmacy-2.yml
@@ -1,11 +1,11 @@
-id: 359438560
+id: 107384686
 type: way
-latitude: 42.50493
-longitude: -83.14227
+latitude: 42.51743
+longitude: -83.18474
 postcode: "48073"
 city: Royal Oak
-street: "East 12 Mile Road"
-housenumber: 209
+street: "Woodward Avenue"
+housenumber: 30900
 phone: ""
-opening_hours: ""
+opening_hours: "24/7"
 website: ""
