update content and data

--- a/data/cities/gaylord/forward-convenience.yml
+++ b/data/cities/gaylord/forward-convenience.yml
@@ -1,11 +1,11 @@
-id: 7841668919
+id: 7841669306
 type: node
-latitude: 44.99066
-longitude: -84.67764
+latitude: 45.02655
+longitude: -84.69139
 postcode: "49735"
 city: Gaylord
-street: "South Otsego Avenue"
-housenumber: 2870
-phone: ""
+street: "West Main Street"
+housenumber: 1025
+phone: "+1 989 732 3317"
 opening_hours: ""
 website: ""
