--- a/data/cities/gaylord/marathon.yml
+++ b/data/cities/gaylord/marathon.yml
@@ -1,11 +1,11 @@
-id: 7841669306
+id: 7841669307
 type: node
-latitude: 45.02655
-longitude: -84.69139
+latitude: 45.027
+longitude: -84.69187
 postcode: "49735"
 city: Gaylord
 street: "West Main Street"
-housenumber: 1025
-phone: "+1 989 732 3317"
+housenumber: 1041
+phone: ""
 opening_hours: ""
 website: ""
