--- a/data/cities/hazel-park/hazel-park-food-center.yml
+++ b/data/cities/hazel-park/hazel-park-food-center.yml
@@ -1,7 +1,7 @@
-id: 8519327814
-type: node
-latitude: 42.47364
-longitude: -83.10479
+id: 917225577
+type: way
+latitude: 42.47354
+longitude: -83.10463
 postcode: "48030"
 city: Hazel Park
 street: "John R Road"
