--- a/data/cities/hazel-park/tonys-ace-hardware.yml
+++ b/data/cities/hazel-park/tonys-ace-hardware.yml
@@ -1,7 +1,7 @@
-id: 2586264622
-type: node
-latitude: 42.46901
-longitude: -83.10457
+id: 1032729356
+type: way
+latitude: 42.46932
+longitude: -83.10445
 postcode: "48030"
 city: Hazel Park
 street: "John R Road"
