--- a/data/cities/holly/alexs-to-go.yml
+++ b/data/cities/holly/alexs-to-go.yml
@@ -1,7 +1,7 @@
-id: 8522876136
-type: node
+id: 421179430
+type: way
 latitude: 42.8154
-longitude: -83.54827
+longitude: -83.54846
 postcode: "48442"
 city: Holly
 street: "Dixie Highway"
