--- a/data/cities/royal-oak/kramar-jewelry.yml
+++ b/data/cities/royal-oak/kramar-jewelry.yml
@@ -4,7 +4,7 @@ latitude: 42.48133
 longitude: -83.15073
 postcode: ""
 city: Royal Oak
-street: "Woodward Ave"
+street: "Woodward Avenue"
 housenumber: 25766
 phone: ""
 opening_hours: ""
