--- a/data/cities/royal-oak/mickey-shorr.yml
+++ b/data/cities/royal-oak/mickey-shorr.yml
@@ -4,8 +4,8 @@ latitude: 42.48257
 longitude: -83.15139
 postcode: ""
 city: Royal Oak
-street: "Woodward Ave"
-housenumber: 
+street: "Woodward Avenue"
+housenumber: 25920
 phone: ""
 opening_hours: ""
 website: ""
