update content and data

--- a/data/cities/lansing/middle-village-micro-market.yml
+++ b/data/cities/lansing/middle-village-micro-market.yml
@@ -7,5 +7,5 @@ city: Lansing
 street: "Washington Square South"
 housenumber: 112
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Sa 11:00-19:00"
 website: "https://www.facebook.com/Middle-Village-Micro-Market-111677831289617"
