--- a/data/cities/new-hudson/bp.yml
+++ b/data/cities/new-hudson/bp.yml
@@ -1,7 +1,7 @@
-id: 8538937955
-type: node
-latitude: 42.51605
-longitude: -83.65235
+id: 376174998
+type: way
+latitude: 42.51593
+longitude: -83.65246
 postcode: "48165"
 city: New Hudson
 street: "Grand River Avenue"
