--- a/data/cities/new-hudson/copper-creek-vineyard.yml
+++ b/data/cities/new-hudson/copper-creek-vineyard.yml
@@ -1,7 +1,7 @@
-id: 8538937938
-type: node
-latitude: 42.51496
-longitude: -83.63346
+id: 919397156
+type: way
+latitude: 42.51484
+longitude: -83.63337
 postcode: "48165"
 city: New Hudson
 street: "Grand River Avenue"
