--- a/data/cities/new-hudson/usa-2-go.yml
+++ b/data/cities/new-hudson/usa-2-go.yml
@@ -1,11 +1,11 @@
-id: 8538937946
-type: node
-latitude: 42.51391
-longitude: -83.61692
+id: 475048694
+type: way
+latitude: 42.51484
+longitude: -83.61519
 postcode: "48165"
 city: New Hudson
 street: "Milford Road"
-housenumber: 30465
-phone: "+1 248 474 0900"
-opening_hours: "24/7"
+housenumber: 30560
+phone: ""
+opening_hours: ""
 website: ""
