--- a/data/cities/woodhaven/t-mobile.yml
+++ b/data/cities/woodhaven/t-mobile.yml
@@ -1,11 +1,11 @@
-id: 925887690
-type: way
-latitude: 42.12592
-longitude: -83.22509
+id: 7740647570
+type: node
+latitude: 42.13991
+longitude: -83.22508
 postcode: "48183"
 city: Woodhaven
 street: "Allen Road"
-housenumber: 25025
+housenumber: 23161
 phone: ""
 opening_hours: ""
 website: ""
