--- a/data/cities/new-hudson/usa-2-go-2.yml
+++ b/data/cities/new-hudson/usa-2-go-2.yml
@@ -1,11 +1,11 @@
-id: 475048694
+id: 919397157
 type: way
-latitude: 42.51484
-longitude: -83.61519
+latitude: 42.51381
+longitude: -83.61682
 postcode: "48165"
 city: New Hudson
 street: "Milford Road"
-housenumber: 30560
-phone: ""
-opening_hours: ""
+housenumber: 30465
+phone: "+1 248 474 0900"
+opening_hours: "24/7"
 website: ""
