--- a/data/cities/chelsea/chelsea-petroleum.yml
+++ b/data/cities/chelsea/chelsea-petroleum.yml
@@ -1,7 +1,7 @@
-id: 8424017904
-type: node
-latitude: 42.29662
-longitude: -84.02541
+id: 624530905
+type: way
+latitude: 42.29671
+longitude: -84.02543
 postcode: "48118"
 city: Chelsea
 street: "South Main Street"
