update content and data

--- a/data/cities/allen-park/amoco.yml
+++ b/data/cities/allen-park/amoco.yml
@@ -1,7 +1,7 @@
-id: 8587250844
-type: node
-latitude: 42.25643
-longitude: -83.2147
+id: 728243265
+type: way
+latitude: 42.25648
+longitude: -83.21481
 postcode: "48101"
 city: Allen Park
 street: "Allen Road"
