--- a/data/cities/lincoln-park/chillbox.yml
+++ b/data/cities/lincoln-park/chillbox.yml
@@ -1,7 +1,7 @@
-id: 8636264952
-type: node
-latitude: 42.23836
-longitude: -83.19541
+id: 914505477
+type: way
+latitude: 42.23827
+longitude: -83.19535
 postcode: "48146"
 city: Lincoln Park
 street: "Dix Highway"
