--- a/data/cities/detroit/dollar-general-10.yml
+++ b/data/cities/detroit/dollar-general-10.yml
@@ -1,11 +1,11 @@
-id: 640845842
+id: 432204246
 type: way
-latitude: 42.35745
-longitude: -83.21878
-postcode: "48228"
+latitude: 42.31548
+longitude: -83.1108
+postcode: "48209"
 city: Detroit
-street: "Joy Road"
-housenumber: 18209
+street: "West Vernor Highway"
+housenumber: 6365
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollargeneral.com/"
