--- a/data/cities/detroit/dollar-general-9.yml
+++ b/data/cities/detroit/dollar-general-9.yml
@@ -1,11 +1,11 @@
-id: 432204246
-type: way
-latitude: 42.31548
-longitude: -83.1108
-postcode: "48209"
+id: 9810712751
+type: node
+latitude: 42.37032
+longitude: -83.11663
+postcode: "48206"
 city: Detroit
-street: "West Vernor Highway"
-housenumber: 6365
-phone: ""
-opening_hours: ""
-website: "https://www.dollargeneral.com/"
+street: "Joy Road"
+housenumber: 3431
+phone: "+1 (313) 572-0974"
+opening_hours: "Mo-Su 08:00-20:00"
+website: ""
