--- a/data/cities/detroit/key-foods.yml
+++ b/data/cities/detroit/key-foods.yml
@@ -1,11 +1,11 @@
-id: 852575273
-type: way
-latitude: 42.34666
-longitude: -83.04152
+id: 9813540027
+type: node
+latitude: 42.3466
+longitude: -83.04131
 postcode: "48207"
 city: Detroit
 street: "Russell Street"
-housenumber: 
+housenumber: 1352
 phone: ""
 opening_hours: ""
 website: ""
