update content and data

--- a/data/cities/lansing/meijer-2.yml
+++ b/data/cities/lansing/meijer-2.yml
@@ -1,11 +1,11 @@
-id: 42416011
-type: way
-latitude: 42.73963
-longitude: -84.62483
-postcode: "48917"
+id: 8287308577
+type: node
+latitude: 42.66745
+longitude: -84.53904
+postcode: "48911"
 city: Lansing
-street: "West Saginaw Highway"
-housenumber: 5125
-phone: "+1-517-321-1302"
-opening_hours: "24/7"
-website: "https://www.meijer.com/shop/en/store/23"
+street: "South Pennsylvania Avenue"
+housenumber: 6250
+phone: ""
+opening_hours: ""
+website: ""
