--- a/data/cities/lansing/meijer-3.yml
+++ b/data/cities/lansing/meijer-3.yml
@@ -1,11 +1,11 @@
-id: 584994988
+id: 42416011
 type: way
-latitude: 42.66898
-longitude: -84.54201
-postcode: "48911"
+latitude: 42.73963
+longitude: -84.62483
+postcode: "48917"
 city: Lansing
-street: "South Pennsylvania Avenue"
-housenumber: 6200
-phone: "+1-517-394-7720"
+street: "West Saginaw Highway"
+housenumber: 5125
+phone: "+1-517-321-1302"
 opening_hours: "24/7"
-website: "https://www.meijer.com/atstores/main.jsp?storeNumber=324"
+website: "https://www.meijer.com/shop/en/store/23"
