--- a/data/cities/livonia/the-front-room.yml
+++ b/data/cities/livonia/the-front-room.yml
@@ -4,8 +4,8 @@ latitude: 42.39753
 longitude: -83.37717
 postcode: "48154"
 city: Livonia
-street: "33614 5 Mile Road"
+street: "5 Mile Road"
 housenumber: 
 phone: "734-525-3161"
-opening_hours: "Tue-Fri: 10:00AM to 4:00PM, Saturday: 9:00AM to 1:00PM"
+opening_hours: "Tu-Fr 10:00-16:00, Sa 09:00-13:00"
 website: "http://thefrontroommi.com"
