--- a/data/cities/dearborn/snipes.yml
+++ b/data/cities/dearborn/snipes.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Dearborn
 street: "Michigan Avenue"
 housenumber: 15231
-phone: "313-584-3820"
+phone: "+1-313-584-3820"
 opening_hours: ""
 website: "https://stores.snipesusa.com/mi/dearborn/107/"
