update content and data

--- a/data/cities/holland/menards.yml
+++ b/data/cities/holland/menards.yml
@@ -6,6 +6,6 @@ postcode: "49423"
 city: Holland
 street: "East 16th Street"
 housenumber: 572
-phone: ""
-opening_hours: ""
-website: ""
+phone: "1 (616) 396-0120"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-20:00"
+website: "http://menards.com"
