--- a/data/cities/saginaw/draper-chevrolet.yml
+++ b/data/cities/saginaw/draper-chevrolet.yml
@@ -4,7 +4,7 @@ latitude: 43.46855
 longitude: -83.97497
 postcode: "48603"
 city: Saginaw
-street: "Bay Road;M-84"
+street: "Bay Road"
 housenumber: 4200
 phone: "+1-888-721-3268"
 opening_hours: ""
