--- a/data/cities/davison/heidis-market.yml
+++ b/data/cities/davison/heidis-market.yml
@@ -1,7 +1,7 @@
-id: 652107986
-type: way
-latitude: 43.09227
-longitude: -83.51787
+id: 9853335952
+type: node
+latitude: 43.09242
+longitude: -83.51777
 postcode: "48423"
 city: Davison
 street: "North State Road"
