--- a/data/cities/kalamazoo/michigan-auto-sales.yml
+++ b/data/cities/kalamazoo/michigan-auto-sales.yml
@@ -4,7 +4,7 @@ latitude: 42.29533
 longitude: -85.67148
 postcode: "49009"
 city: Kalamazoo
-street: "W Main St"
+street: "West Main Street"
 housenumber: 6211
 phone: "+1 269-744-4241"
 opening_hours: "Mo-Sa 08:00-18:00"
