update content and data

--- a/data/cities/wyandotte/cvs-pharmacy.yml
+++ b/data/cities/wyandotte/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 146687808
+id: 147980897
 type: way
-latitude: 42.20305
-longitude: -83.1507
+latitude: 42.21283
+longitude: -83.18006
 postcode: "48192"
 city: Wyandotte
-street: "Elm Street"
-housenumber: 131
+street: "Fort Street"
+housenumber: 2025
 phone: ""
 opening_hours: ""
 website: ""
