update content and data

--- a/data/cities/hastings/b-wilds-auto-sales-and-service.yml
+++ b/data/cities/hastings/b-wilds-auto-sales-and-service.yml
@@ -1,10 +1,10 @@
-id: 5855752037
-type: node
-latitude: 42.65136
-longitude: -85.28635
+id: 919363495
+type: way
+latitude: 42.6512
+longitude: -85.28648
 postcode: "49058"
 city: Hastings
-street: "N Michigan Ave"
+street: "North Michigan Avenue"
 housenumber: 328
 phone: "+1-269-804-6001"
 opening_hours: "Mo-Fr 08:00-17:00"
