--- a/data/cities/taylor/7-eleven-3.yml
+++ b/data/cities/taylor/7-eleven-3.yml
@@ -1,11 +1,11 @@
-id: 8613881236
+id: 9894244674
 type: node
-latitude: 42.19798
-longitude: -83.26893
+latitude: 42.26889
+longitude: -83.25088
 postcode: "48180"
 city: Taylor
-street: "Telegraph Road"
-housenumber: 14850
-phone: ""
-opening_hours: ""
+street: "Van Born Road"
+housenumber: 22027
+phone: "+1 313 277 8677"
+opening_hours: "24/7"
 website: ""
