--- a/data/cities/wyandotte/white-magnolia-bridal-and-prom.yml
+++ b/data/cities/wyandotte/white-magnolia-bridal-and-prom.yml
@@ -1,11 +1,11 @@
-id: 8503890188
+id: 6612236680
 type: node
-latitude: 42.20374
-longitude: -83.14934
+latitude: 42.20371
+longitude: -83.14936
 postcode: "48192"
 city: Wyandotte
 street: "Biddle Avenue"
-housenumber: 2934
-phone: "+1-734-999-0560"
+housenumber: 2938
+phone: ""
 opening_hours: ""
 website: ""
