--- a/data/cities/taylor/7-eleven-2.yml
+++ b/data/cities/taylor/7-eleven-2.yml
@@ -1,11 +1,11 @@
-id: 8613880946
+id: 8613881236
 type: node
-latitude: 42.2689
-longitude: -83.25086
+latitude: 42.19798
+longitude: -83.26893
 postcode: "48180"
 city: Taylor
-street: "Van Born Road"
-housenumber: 22027
-phone: "+1 313 277 8677"
-opening_hours: "24/7"
+street: "Telegraph Road"
+housenumber: 14850
+phone: ""
+opening_hours: ""
 website: ""
