--- a/data/cities/wyandotte/sweet-nothings-fine-cakes-and-desserts.yml
+++ b/data/cities/wyandotte/sweet-nothings-fine-cakes-and-desserts.yml
@@ -6,6 +6,6 @@ postcode: "48192"
 city: Wyandotte
 street: "Maple Street"
 housenumber: 145
-phone: "+1-734-285-2253"
-opening_hours: ""
+phone: "+1-734-258-8211"
+opening_hours: "Mo-Sa 10:00-19:00; Su 10:00-17:00"
 website: ""
