update content and data

--- a/data/cities/hessel/nibblelungen.yml
+++ b/data/cities/hessel/nibblelungen.yml
@@ -8,4 +8,4 @@ street: "South Pickford Avenue"
 housenumber: 197
 phone: "906-484-2435"
 opening_hours: ""
-website: "http://www.nibblelungen.com/"
+website: "https://nibblelungen.com/"
