--- a/data/cities/otter-lake/north-lake-general-store.yml
+++ b/data/cities/otter-lake/north-lake-general-store.yml
@@ -1,7 +1,7 @@
-id: 8094008541
-type: node
-latitude: 43.23366
-longitude: -83.42592
+id: 868353064
+type: way
+latitude: 43.23361
+longitude: -83.42599
 postcode: "48464"
 city: Otter Lake
 street: "Boucher Road"
