--- a/data/cities/lansing/old-town-general-store.yml
+++ b/data/cities/lansing/old-town-general-store.yml
@@ -4,7 +4,7 @@ latitude: 42.74726
 longitude: -84.54758
 postcode: "48906"
 city: Lansing
-street: "East Grand River Avenue;East César E. Chávez Avenue"
+street: "East César E. Chávez Avenue"
 housenumber: 408
 phone: "+1 517 487 6847"
 opening_hours: "Mo 11:00-18:00; Tu-Fr 10:00-19:00; Sa 11:00-18:00; Su 12:00-17:00"
