--- a/data/cities/otter-lake/otter-lake-central.yml
+++ b/data/cities/otter-lake/otter-lake-central.yml
@@ -1,7 +1,7 @@
-id: 8094008551
-type: node
-latitude: 43.21076
-longitude: -83.45864
+id: 868353066
+type: way
+latitude: 43.21056
+longitude: -83.45852
 postcode: "48464"
 city: Otter Lake
 street: "Lake Road"
