update content and data

--- a/data/cities/dearborn/citgo-6.yml
+++ b/data/cities/dearborn/citgo-6.yml
@@ -1,11 +1,11 @@
-id: 315559922
+id: 262719371
 type: way
-latitude: 42.32626
-longitude: -83.28675
-postcode: "48128"
+latitude: 42.30635
+longitude: -83.24602
+postcode: "48124"
 city: Dearborn
-street: "Ford Road"
-housenumber: 25351
-phone: "+1 313 565 1324"
-opening_hours: "06:00-24:00"
+street: "Michigan Avenue"
+housenumber: 22096
+phone: ""
+opening_hours: "24/7"
 website: ""
