--- a/data/cities/dearborn/citgo-7.yml
+++ b/data/cities/dearborn/citgo-7.yml
@@ -1,11 +1,11 @@
-id: 782289192
+id: 315559922
 type: way
-latitude: 42.32913
-longitude: -83.17923
-postcode: "48126"
+latitude: 42.32626
+longitude: -83.28675
+postcode: "48128"
 city: Dearborn
 street: "Ford Road"
-housenumber: 13841
-phone: ""
-opening_hours: ""
+housenumber: 25351
+phone: "+1 313 565 1324"
+opening_hours: "06:00-24:00"
 website: ""
