--- a/data/cities/dearborn/citgo-8.yml
+++ b/data/cities/dearborn/citgo-8.yml
@@ -1,11 +1,11 @@
-id: 8655148970
-type: node
-latitude: 42.32938
-longitude: -83.16191
+id: 782289192
+type: way
+latitude: 42.32913
+longitude: -83.17923
 postcode: "48126"
 city: Dearborn
 street: "Ford Road"
-housenumber: 10419
+housenumber: 13841
 phone: ""
 opening_hours: ""
 website: ""
