--- a/data/cities/dearborn/marathon-4.yml
+++ b/data/cities/dearborn/marathon-4.yml
@@ -1,11 +1,11 @@
-id: 8655132393
+id: 8655148998
 type: node
-latitude: 42.32052
-longitude: -83.18297
+latitude: 42.32998
+longitude: -83.16842
 postcode: "48126"
 city: Dearborn
-street: "Michigan Avenue"
-housenumber: 14402
+street: "Ford Road"
+housenumber: 12850
 phone: ""
 opening_hours: ""
 website: ""
