--- a/data/cities/dearborn/marathon-6.yml
+++ b/data/cities/dearborn/marathon-6.yml
@@ -1,11 +1,11 @@
-id: 8691223798
+id: 8691224362
 type: node
-latitude: 42.32671
-longitude: -83.26819
-postcode: "48128"
+latitude: 42.34405
+longitude: -83.19565
+postcode: "48126"
 city: Dearborn
-street: "Ford Road"
-housenumber: 23645
+street: "West Warren Avenue"
+housenumber: 15430
 phone: ""
 opening_hours: ""
 website: ""
