--- a/data/cities/dearborn/marathon-7.yml
+++ b/data/cities/dearborn/marathon-7.yml
@@ -1,11 +1,11 @@
-id: 8691224362
-type: node
-latitude: 42.34405
-longitude: -83.19565
-postcode: "48126"
+id: 492884859
+type: way
+latitude: 42.28515
+longitude: -83.23208
+postcode: "48124"
 city: Dearborn
-street: "West Warren Avenue"
-housenumber: 15430
+street: "Pelham Road"
+housenumber: 3544
 phone: ""
 opening_hours: ""
 website: ""
