--- a/data/cities/dearborn/marathon-8.yml
+++ b/data/cities/dearborn/marathon-8.yml
@@ -1,11 +1,11 @@
-id: 492884859
+id: 784095589
 type: way
-latitude: 42.28515
-longitude: -83.23208
-postcode: "48124"
+latitude: 42.32914
+longitude: -83.18156
+postcode: "48126"
 city: Dearborn
-street: "Pelham Road"
-housenumber: 3544
+street: "Ford Road"
+housenumber: 14243
 phone: ""
 opening_hours: ""
 website: ""
