--- a/data/cities/dearborn/marathon-9.yml
+++ b/data/cities/dearborn/marathon-9.yml
@@ -1,11 +1,11 @@
-id: 784095589
+id: 793495948
 type: way
-latitude: 42.32914
-longitude: -83.18156
-postcode: "48126"
+latitude: 42.29001
+longitude: -83.20772
+postcode: "48124"
 city: Dearborn
-street: "Ford Road"
-housenumber: 14243
+street: "Southfield Road"
+housenumber: 1300
 phone: ""
 opening_hours: ""
 website: ""
