--- a/data/cities/detroit/marathon-50.yml
+++ b/data/cities/detroit/marathon-50.yml
@@ -4,7 +4,7 @@ latitude: 42.26316
 longitude: -83.16721
 postcode: "48217"
 city: Detroit
-street: "West Outer Drive"
+street: "Outer Drive West"
 housenumber: 25875
 phone: ""
 opening_hours: ""
