--- a/data/cities/detroit/michigan-party-store.yml
+++ b/data/cities/detroit/michigan-party-store.yml
@@ -1,7 +1,7 @@
-id: 8757663259
-type: node
-latitude: 42.33152
-longitude: -83.11006
+id: 1083508777
+type: way
+latitude: 42.33147
+longitude: -83.11022
 postcode: "48210"
 city: Detroit
 street: "Michigan Avenue"
