--- a/data/cities/southgate/boost-mobile.yml
+++ b/data/cities/southgate/boost-mobile.yml
@@ -1,11 +1,11 @@
-id: 6397560979
+id: 7049775946
 type: node
-latitude: 42.19919
-longitude: -83.22327
+latitude: 42.21406
+longitude: -83.19443
 postcode: "48195"
 city: Southgate
-street: "Eureka Road"
-housenumber: 18708
+street: "Dix-Toledo Highway"
+housenumber: 12974
 phone: ""
 opening_hours: ""
 website: ""
