--- a/data/cities/detroit/citgo-62.yml
+++ b/data/cities/detroit/citgo-62.yml
@@ -1,11 +1,11 @@
-id: 185647328
+id: 440894239
 type: way
-latitude: 42.37685
-longitude: -83.07821
-postcode: "48202"
+latitude: 42.28897
+longitude: -83.14469
+postcode: "48217"
 city: Detroit
-street: "Woodward Avenue"
-housenumber: 8351
-phone: "+1 313 873 3309"
-opening_hours: "24/7"
+street: "South Fort Street"
+housenumber: 270
+phone: "+1 313 297 2227"
+opening_hours: "Mo-Sa 0:00-24:00"
 website: ""
