update content and data

--- a/data/cities/detroit/boost-mobile-3.yml
+++ b/data/cities/detroit/boost-mobile-3.yml
@@ -1,11 +1,11 @@
-id: 377811323
-type: way
-latitude: 42.31718
-longitude: -83.10367
-postcode: "48209"
+id: 9933920970
+type: node
+latitude: 42.44794
+longitude: -83.02446
+postcode: "48234"
 city: Detroit
-street: "West Vernor Highway"
-housenumber: 5708
-phone: "+1 313 757 7744"
-opening_hours: "Mo-Th 10:00-19:00; Fr 10:00-20:00; Sa 10:00-19:00; Su 11:00-17:00"
-website: ""
+street: "Van Dyke Street"
+housenumber: 20524
+phone: "+13138912200"
+opening_hours: "Mo-Fr 10:00-20:00; Sa 10:00-19:00; Su 12:00-17:00"
+website: "https://www.boostmobile.com"
