--- a/data/cities/grass-lake/grass-lake-mini-mart.yml
+++ b/data/cities/grass-lake/grass-lake-mini-mart.yml
@@ -1,7 +1,7 @@
-id: 8320289964
-type: node
-latitude: 42.2528
-longitude: -84.2044
+id: 397381783
+type: way
+latitude: 42.25275
+longitude: -84.20451
 postcode: "49240"
 city: Grass Lake
 street: "East Michigan Avenue"
