--- a/data/cities/grass-lake/kelly-express.yml
+++ b/data/cities/grass-lake/kelly-express.yml
@@ -1,7 +1,7 @@
-id: 8320290059
-type: node
-latitude: 42.25189
-longitude: -84.21132
+id: 895115120
+type: way
+latitude: 42.25188
+longitude: -84.21121
 postcode: "49240"
 city: Grass Lake
 street: "East Michigan Avenue"
