--- a/data/cities/lansing/old-town-general-store.yml
+++ b/data/cities/lansing/old-town-general-store.yml
@@ -7,5 +7,5 @@ city: Lansing
 street: "East César E. Chávez Avenue"
 housenumber: 408
 phone: "+1 517 487 6847"
-opening_hours: "Mo 11:00-18:00; Tu-Fr 10:00-19:00; Sa 11:00-18:00; Su 12:00-17:00"
+opening_hours: "Tu-Sa 10:00-18:00; Su off"
 website: "http://oldtown-generalstore.com/"
