--- a/data/cities/okemos/kohls.yml
+++ b/data/cities/okemos/kohls.yml
@@ -1,11 +1,11 @@
-id: 5246526487
-type: node
-latitude: 42.72491
-longitude: -84.41118
+id: 542675826
+type: way
+latitude: 42.72452
+longitude: -84.41057
 postcode: "48864"
 city: Okemos
 street: "Newman Road"
 housenumber: 1710
-phone: "+1-517-347-2305"
+phone: "+1 517 347 2305"
 opening_hours: ""
 website: "https://www.kohls.com/stores/mi/okemos-738.shtml"
