--- a/data/cities/east-lansing/campbells-market-baskey.yml
+++ b/data/cities/east-lansing/campbells-market-baskey.yml
@@ -7,5 +7,5 @@ city: East Lansing
 street: "Grand River Avenue"
 housenumber: 547
 phone: "+1 517-977-1068"
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-21:00; Sa 10:00-21:00; Su 10:00-19:00"
 website: "https://www.facebook.com/campbellsmarketbasket/"
