--- a/data/cities/farmington/cvs-pharmacy.yml
+++ b/data/cities/farmington/cvs-pharmacy.yml
@@ -7,5 +7,5 @@ city: Farmington
 street: "Farmington Road"
 housenumber: 23391
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 08:00-22:00"
 website: ""
